<resources>
    <string name="app_name">Q音助手</string>
    <string name="xposed_description">还你一个干净的Q音 Android 客户端</string>
    <string name="settings_title">Q音助手设置</string>
    <string name="back">返回</string>
    <string name="reboot_host">重启客户端</string>
    <string name="reboot_host_summary">配置修改后重启客户端才会生效</string>
    <string name="pls_reboot_host">导入成功，是否立即重启客户端使之生效？</string>
    <string name="prefs_category_main">主要功能</string>
    <string name="prefs_purify_splash_title">净化开屏页面</string>
    <string name="prefs_purify_splash_summary">去除客户端启动时的推广</string>
    <string name="prefs_category_backup">备份与还原</string>
    <string name="prefs_export_title">导出配置</string>
    <string name="prefs_import_title">导入配置</string>
    <string name="prefs_category_settings">设置</string>
    <string name="prefs_save_log_title">保存日志到文件</string>
    <string name="prefs_save_log_summary">启用后，日志将保存到文件%s</string>
    <string name="prefs_share_log_title">分享日志</string>
    <string name="save_prefs_file">保存配置文件</string>
    <string name="choose_prefs_file">选择配置文件</string>
    <string name="open_file_manager_failed">文件管理器打开失败</string>
    <string name="not_found_log_file">没有发现日志文件</string>
    <string name="log_file_not_exist">日志文件不存在</string>
    <string name="old_log_item">%1$s (崩溃相关发这个)</string>
    <string name="hook_error">出现错误\n%1$s\n部分功能可能失效。</string>
    <string name="not_supported">不支持该架构或框架，部分功能可能失效。</string>
    <string name="prefs_purify_home_top_tab_title">净化首页顶部标签</string>
    <string name="prefs_purify_home_top_tab_summary">选择要隐藏的标签</string>
    <string name="prefs_purify_red_dots_title">净化红点</string>
    <string name="prefs_purify_red_dots_summary">更多及设置页面不显示红点</string>
    <string name="prefs_purify_more_items_title">净化更多页面</string>
    <string name="prefs_purify_more_items_summary">更多页面选择需要移除的项</string>
    <string name="prefs_hide_music_world_title">隐藏音乐空间入口</string>
    <string name="prefs_hide_music_world_summary">我的页面隐藏音乐空间入口</string>
    <string name="prefs_hide_vip_bubble_title">隐藏会员购买横条</string>
    <string name="prefs_hide_vip_bubble_summary">日推及我的页面隐藏会员购买横条</string>
    <string name="prefs_purify_live_guide_title">屏蔽直播入口</string>
    <string name="prefs_purify_live_guide_summary">播放页右上角屏蔽直播入口</string>
    <string name="prefs_forbid_slide_title">禁止上划查看视频</string>
    <string name="prefs_forbid_slide_summary">播放页禁止上划查看视频</string>
    <string name="tips_title">Q音助手提示</string>
    <string name="tips_open_clean_mode">设置里开启简洁模式配合食用更佳哟！</string>
    <string name="go_to_mode_setting">前往设置</string>
    <string name="i_know">我知道了</string>
    <string name="jump_failed">跳转失败</string>
    <string name="prefs_category_purify">精简与美化</string>
    <string name="prefs_category_about">关于</string>
    <string name="prefs_version_title">版本</string>
    <string name="prefs_check_update_title">检查更新</string>
    <string name="found_update">发现新版本，点击查看</string>
    <string name="found_update_with_version">发现新版本 %1$s</string>
    <string name="no_update">暂无更新</string>
    <string name="update_now">立即更新</string>
    <string name="check_update_failed">更新检查失败</string>
    <string name="releases_url" translatable="false">https://api.github.com/repos/zjns/QMHelper/releases</string>
    <string name="update_url" translatable="false">https://github.com/zjns/QMHelper/releases/tag/%1$s</string>
    <string name="prefs_author_title">作者</string>
    <string name="prefs_author_summary" translatable="false">Kofua</string>
    <string name="repo_url" translatable="false">https://github.com/zjns/QMHelper</string>
    <string name="prefs_tg_channel_title">TG频道</string>
    <string name="prefs_tg_channel_summary">点击加入TG频道</string>
    <string name="tg_url" translatable="false">https://t.me/bb_show</string>
    <string name="prefs_block_live_title">移除首页直播版块</string>
    <string name="prefs_purify_search_title">净化搜索</string>
    <string name="prefs_hide_ad_bar_title">隐藏推广横条</string>
    <string name="prefs_hide_ad_bar_summary">我的收藏页面隐藏推广横条</string>
    <string name="prefs_forbid_music_world_title">隐藏音乐空间</string>
    <string name="prefs_forbid_music_world_summary">我的页面禁止下拉进入音乐空间</string>
    <string name="prefs_category_hidden">隐藏功能</string>
    <string name="prefs_hidden_title">启用隐藏功能</string>
    <string name="prefs_hidden_summary">所有隐藏功能仅供学习交流，请低调使用</string>
    <string name="hidden_enabled">已开启隐藏功能，重启客户端后生效</string>
    <string name="hidden_disabled">已关闭隐藏功能，重启客户端后生效</string>
    <string name="hidden_remain_click_count">再按%1$d次开启隐藏功能</string>
    <string name="prefs_decrypt_downloads_title">解密已下载音乐</string>
    <string name="need_to_request_storage_perm">需要获取外置存储写入权限才能进一步操作，是否继续？</string>
    <string name="storage_perm_grant_failed">外置存储写入权限获取失败，请打开APP的系统权限设置页面手动开启权限。</string>
    <string name="pls_choose_save_dir">请选择保存解密歌曲的文件夹</string>
    <string name="invalid_storage_path">请选择有效的外置存储文件夹</string>
    <string name="decrypt_completed_title">解密完成</string>
    <string name="decrypt_completed_summary_none">没有找到需要解密的音乐！</string>
    <string name="decrypt_completed_summary_all">解密完成，共%1$d首加密音乐，全部解密成功。是否删除原文件？</string>
    <string name="decrypt_completed_summary">解密完成，共%1$d首加密音乐，%2$d首解密成功，%3$d首解密失败。是否删除原文件？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="single_decrypt_success">[%1$d/%2$d] %3$s 解密成功</string>
    <string name="single_decrypt_failed">[%1$d/%2$d] %3$s 解密失败</string>
    <string name="prefs_block_bottom_tips_title">屏蔽底部提示栏</string>
    <string name="prefs_block_bottom_tips_summary">屏蔽播放页底部提示栏</string>
    <string name="prefs_block_cover_ads_title">屏蔽封面推广</string>
    <string name="prefs_block_cover_ads_summary">屏蔽播放页封面各种推广</string>
    <string name="prefs_block_user_guide_title">屏蔽关注提醒</string>
    <string name="prefs_block_user_guide_summary">屏蔽播放页音乐人关注提醒</string>
    <string name="prefs_copy_enhance_title">长按自由复制</string>
    <string name="prefs_copy_enhance_summary">长按评论/专辑简介/专辑详情弹出自由选择对话框</string>
    <string name="copy_enhance">自由复制</string>
    <string name="share">分享</string>
    <string name="share_copy_content">分享复制内容</string>
    <string name="copy_all">复制全部</string>
    <string name="copy_success">复制成功</string>
    <string name="prefs_block_comment_banners_title">屏蔽评论页顶部横幅</string>
    <string name="prefs_block_comment_banners_summary">屏蔽评论页顶部推广横幅</string>
    <string name="prefs_remove_comment_recommend_title">移除评论列表推荐</string>
    <string name="prefs_remove_comment_recommend_summary">移除评论列表直播等推荐内容</string>
    <string name="prefs_remove_mine_kol_title">移除创作中心</string>
    <string name="prefs_remove_mine_kol_summary">我的页面移除创作者中心</string>
    <string name="prefs_category_misc">杂项</string>
    <string name="prefs_fix_song_filename_title">修正歌曲下载文件名</string>
    <string name="prefs_fix_song_filename_summary">歌曲下载文件名移除mqms后缀，长度限制增大到250</string>
    <string name="prefs_allow_save_to_sdcard_extern_title">强制允许音乐下载到扩展SD卡</string>
    <string name="prefs_allow_save_to_sdcard_extern_summary">强制允许音乐下载到\"扩展SD卡/qqmusic/song\"目录，而不是\"扩展SD卡/Android/data/包名/files/qqmusic/song\"。实验性功能，可能导致音乐下载失败，谨慎开启。</string>
    <string name="prefs_purify_share_guide_title">屏蔽分享引导</string>
    <string name="prefs_purify_share_guide_summary">隐藏播放页右上角分享引导动画图标</string>
    <string name="prefs_block_common_ads_title">屏蔽所有三方推广</string>
    <string name="prefs_block_common_ads_summary">屏蔽所有带有标记的三方推广，涵盖轮播图、播放页封面、锁屏页等</string>
    <string name="prefs_global_light_effect_title">禁用律动光效</string>
    <string name="prefs_global_light_effect_summary">禁用播放页律动光效</string>
    <string name="prefs_move_down_recently_title">下移最近播放</string>
    <string name="prefs_move_down_recently_summary">我的页面将最近播放位置下移到收藏歌单下</string>
    <string name="prefs_unlock_theme_title">解锁所有装扮</string>
    <string name="prefs_daily_sign_in_title">自动签到</string>
    <string name="prefs_daily_sign_in_summary">APP启动后每天自动签到一次</string>
    <string name="daily_sign_in_success">自动签到完成！</string>
    <string name="prefs_unlock_font_title">解锁所有字体</string>
    <string name="prefs_unlock_font_summary">解锁所有歌词及歌词海报字体</string>
    <string name="prefs_unlock_lyric_kinetic_title">解锁所有歌词动效</string>
    <string name="prefs_hide_song_list_guide_title">隐藏“新建/导入歌单”引导</string>
    <string name="prefs_hide_song_list_guide_summary">通过强制指定AB实验策略隐藏我的页面自建歌单“新建/导入歌单”引导项，可能失效</string>
</resources>
